--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* CONTAINER DO HEADER */
 .header-container{
     display: flex;
@@ -8,7 +14,6 @@
 
     background: #DC0A2D;
     width: 100%;
-    max-width: 100%;
     height: 112px;
 
     padding-left: 16px;
