--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: #191919!important;
+  background-color: #ffffff!important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
