--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -7,9 +7,20 @@
 .home-container{
     background: #DC0A2D;
     padding: 0px 4px 4px 4px;
+    height: 555px;
 }
 
-.home-content{
-    background: white;
+.home-container .home-content{
+    height: 100%;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 108px 108px 108px;
+    row-gap: 16px;
+    justify-items: center;
+    padding-top: 24px;
+    
+    box-shadow: inset 0px 1px 3px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
 }
 
